k8s/app-db/istio-app.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chaos-demo
spec:
  hosts:
  - chaos-demo.jianhong.com
  - chaos-demo
  gateways:
  - chaos-demo
  http:
  - route:
    - destination:
        host: chaos-demo
        subset: primary
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chaos-demo
spec:
  host: chaos-demo
  subsets:
  - name: primary
    labels:
      release: primary

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chaos-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - chaos-demo.jianhong.com
